--- a/banner.cfg
+++ b/banner.cfg
@@ -1,4 +1,13 @@
-cfg: |
+motd: |
   "Hello there! Hoping you are having a great day
   ... Welcome to '$(hostname)',
     your favorite {{ ansible_network_os }} Sandbox"
+
+login: |
+    "Successfully Logged in!"
+
+exec: |
+    "Priveleged exec mode activated!"
+
+incoming: |
+    "INCOMIINGGGGG (banner)"
