--- a/banner.yaml
+++ b/banner.yaml
@@ -12,19 +12,19 @@
       cisco.ios.ios_banner:
         state: present
         banner: motd
-        text: "{{ cfg }}"
+        text: "{{ motd }}"
       when: ansible_network_os == 'ios'
     
     - name: Set banner for Cisco NX-OS
       cisco.nxos.nxos_banner:
         state: present
         banner: motd
-        text: "{{ cfg }}"
+        text: "{{ motd }}"
       when: ansible_network_os == 'nxos'
 
     - name: Set banner for Cisco IOS XR
       cisco.iosxr.iosxr_banner:
         state: present
         banner: motd
-        text: "{{ cfg }}"
+        text: "{{ motd }}"
       when: ansible_network_os == 'iosxr'
