--- a/banner.yaml
+++ b/banner.yaml
@@ -8,7 +8,7 @@
       cisco.ios.ios_facts:
         gather_subset: all
     - name: Blank out the Banners
-      cisco.ios.ios_config
+      cisco.ios.ios_config:
         lines: 
         - no banner motd
         - no banner login
