--- a/CAT_1_Remediation.yaml
+++ b/CAT_1_Remediation.yaml
@@ -24,7 +24,7 @@
         lines:
           - no ip dns server
           - no ip identd
-      when: "{{ inventory_name }} == 'SDP'"
+      when: "{{ ansible_net_hostname }} == 'SDP'"
 
     - name: IOS Switch NDM V-220595, Review the switch configuration to determine if passwords are encrypted
       cisco.ios.ios_config:
@@ -78,5 +78,5 @@
 
     - name: IOS Switch NDM V-220621, The Cisco switch must be running an IOS release that is currently supported by Cisco Systems.
       ansible.builtin.debug:
-        msg: System {{ inventory_name }} is non-compliant and at version - {{ ansible_net_version }}
+        msg: System {{ ansible_net_hostname }} is non-compliant and at version - {{ ansible_net_version }}
       when: (ansible_net_version != "15.2(20200924:215240)") or (ansible_net_version != "15.9(3)M3")
