--- a/CAT_1_Remediation.yaml
+++ b/CAT_1_Remediation.yaml
@@ -24,7 +24,7 @@
         lines:
           - no ip dns server
           - no ip identd
-      when: "SDP" in {{ inventory_hostname }}
+      when: "SDP" == {{ inventory_hostname }}
 
     - name: IOS Switch NDM V-220595, Review the switch configuration to determine if passwords are encrypted
       cisco.ios.ios_config:
