--- a/CAT_1_Remediation.yaml
+++ b/CAT_1_Remediation.yaml
@@ -10,26 +10,30 @@
     - name: IOS Switch NDM V-220586, Verify that the switch does not have any unnecessary or non-secure ports, protocols, and services enabled.
       cisco.ios.ios_config:
         lines: 
-          - no ip bootp server
-          - no ip finger
-          - no ip http server
-          - no ip rcmd rcp-enable
-          - no ip rcmd rsh-enable
-          - no service config
-          - no service finger
-          - no service tcp-small-servers
-          - no service udp-small-servers
+          - ip bootp server
+          - ip finger
+          - ip http server
+          - ip rcmd rcp-enable
+          - ip rcmd rsh-enable
+          - service config
+          - service finger
+          - service tcp-small-servers
+          - service udp-small-servers
+        state: absent
+        
     - name: IOS Switch NDM V-220586 continued.
       cisco.ios.ios_config:
         lines:
           - no ip dns server
           - no ip identd
+        state: absent
       when: ansible_net_hostname == "SDP"
 
     - name: IOS Switch NDM V-220595, Review the switch configuration to determine if passwords are encrypted
       cisco.ios.ios_config:
         lines: 
           - service password-encryption
+        state: present
 
     - name: IOS Switch NDM V-220596, Review the Cisco switch configuration to verify that all network connections associated with a device management have an idle timeout value set to 10 minutes or less
       cisco.ios.ios_config:
@@ -38,17 +42,20 @@
         parents:
           - line con 0
           - line vty 0 4
+        state: present
 
     - name: IOS Switch NDM V-220607, Review the Cisco switch configuration to verify that it uses FIPS-validated HMAC
       cisco.ios.ios_config:
         lines: 
           - ip ssh version 2
           - ip ssh server algorithm mac hmac-sha1 hmac-sha1-96
+        state: present
           
     - name: IOS Switch NDM V-220607 continued
       cisco.ios.ios_config:
         lines: 
           - ip ssh server algorithm mac hmac-sha2-256 hmac-sha2-512
+        state: present
       when: ansible_net_hostname == "SDP"
                     
 
@@ -58,6 +65,13 @@
           - ip ssh version 2
           - ip ssh server algorithm encryption aes128-ctr aes192-ctr aes256-ctr
           - no ip ssh server algorithm encryption 3des-cbc
+        state: present
+        
+    - name: IOS Switch NDM V-220608 continued
+      cisco.ios.ios_config:
+        lines: 
+          - ip ssh server algorithm encryption 3des-cbc
+        state: absent
 
     - name: Save running to startup when modified
       cisco.ios.ios_config:
@@ -67,11 +81,18 @@
       cisco.ios.ios_config:
         lines: 
           - logging host 10.111.222.227
+        state: present
 
-    - name: IOS Switch NDM V-220623, Verify that 802.1x is configured on all host-facing interfaces
+    - name: IOS Switch NDM V-220623 [Prerequisite config check]
       cisco.ios.ios_config:
         lines:
           - switchport
+        state: present
+        parents: "interface {{ item.key }}"
+      with_dict: "{{ ansible_net_interfaces }}"
+      when: (item.value.operstatus == "down" or item.value.operstatus == "administratively down") and (ansible_net_hostname != "SDP")
+      
+    - name: IOS Switch NDM V-220623, Verify that 802.1x is configured on all host-facing interfaces
       cisco.ios.ios_config:
         lines:
           - description UNUSED->SHUTDOWN
@@ -86,6 +107,7 @@
           - dot1x pae authenticator
           - mab
           - shutdown
+        state: present
         parents: "interface {{ item.key }}"
       with_dict: "{{ ansible_net_interfaces }}"
       when: (item.value.operstatus == "down" or item.value.operstatus == "administratively down") and (ansible_net_hostname != "SDP")
@@ -93,4 +115,4 @@
     - name: IOS Switch NDM V-220621, The Cisco switch must be running an IOS release that is currently supported by Cisco Systems.
       ansible.builtin.debug:
         msg: System {{ ansible_net_hostname }} is non-compliant and at version - {{ ansible_net_version }}
-      when: (ansible_net_version != "15.2(20200924:215240)") or (ansible_net_version != "15.9(3)M3")
+      when: (ansible_net_version != "15.2(20200924:215240)") and (ansible_net_version != "15.9(3)M3")
