--- a/CAT_1_Remediation.yaml
+++ b/CAT_1_Remediation.yaml
@@ -80,7 +80,7 @@
     - name: IOS Switch NDM V-220623, Verify that 802.1x is configured on all host-facing interfaces
       cisco.ios.ios_config:
         lines:
-          - description UNUSED->SHUTDOWN
+          - description UNUSED-SHUTDOWN
           - switchport access vlan 666
           - switchport mode access
           - authentication port-control auto
