--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,11 +1,18 @@
 ---
-- name: Update Ubuuntu
+- name: Linux Server Update
   hosts: all
   become: yes
   gather_facts: false
   tasks:
-  - name: apt
+  - name: Debian update
     apt:
       update_cache: yes
       upgrade: 'no'
-    when: "{{ inventory_hostname }}" == "Dune"
+    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
+
+  -name: RHEL update
+    yum:
+      name: '*'
+      state: latest
+    when: ansible_distribution == "RedHat"
+   
