--- a/upgrade.yml
+++ b/upgrade.yml
@@ -9,7 +9,7 @@
     apt:
       update_cache: yes
       upgrade: 'no'
-    when: ansible_facts['distribution'] == "Ubuntu" or ansible_facts['distribution'] == "Debian"
+    when: ansible_facts['os_family'] == "Ubuntu" or ansible_facts['distribution'] == "Debian"
 
 #    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
 
@@ -17,6 +17,6 @@
     yum:
       name: '*'
       state: latest
-    when: ansible_facts['distribution'] == "RedHat"
+    when: ansible_facts['os_family'] == "RedHat"
  #   when: ansible_distribution == "RedHat"
    
