--- a/upgrade.yml
+++ b/upgrade.yml
@@ -2,7 +2,7 @@
 - name: Linux Server Update
   hosts: all
   become: yes
-  gather_facts: false
+  gather_facts: yes
   connection: ssh
   tasks:
   - name: Debian update
